# Chess-RayTracer

./: CMakeLists.txt  README.md  TEMPLATE_README.md  powershell_cmds.txt
SDL2/test/: testgesture.c  testyuv_cvt.c
html/: _app_8h_source.html  _bounding_box_8h.html  _bounding_box_8h_source.html  _camera_8h.html  _camera_8h_source.html  _chessboard_8h.html  _chessboard_8h_source.html  _config_8h_source.html  _log_8h_source.html  _material_8h.html  _material_8h_source.html  _obj_loader_8h_source.html  _objects_8h.html  _objects_8h_source.html  _p_d_f_8h.html  _p_d_f_8h_source.html  _random_8h_source.html  _ray_8h.html  _ray_8h_source.html  _scene_8h.html  _scene_8h_source.html  _utils_8h.html  _utils_8h_source.html  _vector_8h_source.html  annotated.html  class_app-members.html  class_app.html  class_obj_loader-members.html  class_obj_loader.html  class_r_t_1_1_bounding_box-members.html  class_r_t_1_1_bounding_box.html  class_r_t_1_1_camera-members.html  class_r_t_1_1_camera.html  class_r_t_1_1_chessboard-members.html  class_r_t_1_1_chessboard.html  class_r_t_1_1_cosine_p_d_f-members.html  class_r_t_1_1_cosine_p_d_f.html  class_r_t_1_1_dielectric-members.html  class_r_t_1_1_dielectric.html  class_r_t_1_1_distant_light_source-members.html  (+44 more)
html/search/: all_0.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+33 more)
scripts/: App.cpp  App.h  Log.h  Main.cpp
(+25 files in other folders)
